# clipper-backend

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/services/: ffmpeg.rs
tests/: quick_dev.rs
