[package]
name = "clipper-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
dotenv = "0.15"
redis = "0.23"
tokio-util = { version = "0.7", features = ["codec"] }
futures-util = "0.3.31"

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.9"
